fix on alignment listings page

--- a/html/wp-content/themes/klue/assets/sass/screen.scss
+++ b/html/wp-content/themes/klue/assets/sass/screen.scss
@@ -1462,7 +1462,7 @@ body {
   }
 
 .blogfeatured__secondary {
-  margin: 0;
+  margin: -5 0 0 0;
 
   @media (max-width: $breakpoint-tablet) {
     margin: 30px auto;
